Create styles in final sections 'section-promo', 'section-us' and section-footer'; the header was changed, add imagen in background.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <div class="button">
             <a href="/" class="button-black">Read More</a>
         </div>
+        <img class="background" src="/images/header-coding.jpg" alt="black screen with code">
     </div>
 </header>
 
@@ -82,6 +83,7 @@
         <div class="content-us-1">
             <h2>Contact us</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur a suscipit voluptatem adipisci asperiores voluptatibus ut dolorum sed aperiam! Dolorem error dicta nihil? Iste, autem. Eveniet reprehenderit nostrum nam alias.</p>
+            <p>contact@foxwebsolution.net</p>
         </div>
         <div class="content-us-2">
             <h2>About our company</h2>
