fix little things, like colors variables and  backup source.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,12 @@
                     <img src="/images/mobile-applications.jpg" alt="Image user mobile">
                 </div>
                 <div class="text-container">
-                    <h3>Mobile Applications</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, ut. Quas cumque, culpa quidem praesentium voluptatum.</p>
+                    <div class="title-services">
+                        <h3>Mobile Applications</h3>
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, ut. Quas cumque, culpa quidem praesentium voluptatum.</p>
+                    </div>
                 </div>
         </div>
 
@@ -69,8 +73,12 @@
                     <img src="/images/web-development.jpg" alt="Image about laptop and coding">
                 </div>
                 <div class="text-container">
-                    <h3>Web Development</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, ut. Quas cumque, culpa quidem praesentium voluptatum.</p>
+                    <div class="title-services">
+                        <h3>Web Development</h3>
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, ut. Quas cumque, culpa quidem praesentium voluptatum.</p>
+                    </div>
                 </div>
             </div>
         
@@ -79,8 +87,12 @@
                     <img src="/images/tech-marketing.jpg" alt="Image about laptop graph">
                 </div>
                 <div class="text-container">
-                    <h3>Tech Marketing</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, ut. Quas cumque, culpa quidem praesentium voluptatum.</p>
+                    <div class="title-services">
+                         <h3>Tech Marketing</h3>
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequatur, ut. Quas cumque, culpa quidem praesentium voluptatum.</p>
+                    </div>
                 </div>
             </div>
 
