fixed padding of sections us, about our compaÃny and footer

--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
 
     <section class="section-promo">
         <h2>We handle all of your digital needs</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi pariatur amet aut aperiam! Aut esse corrupti nihil est reprehenderit, molestiae, praesentium eligendi nulla sint eius fuga laboriosam sit excepturi ducimus?</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi pariatur amet aut aperiam! Aut esse corrupti nihil est reprehenderit, molestiae, praesentium eliga et</p>
     </section>
 
     <section class="section-us">
         <div class="content-us-1">
             <h2>Contact us</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur a suscipit voluptatem adipisci asperiores voluptatibus ut dolorum sed aperiam! Dolorem error dicta nihil? Iste, autem. Eveniet reprehenderit nostrum nam alias.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur a suscipit voluptatem adipisci asperiores voluptatibus ut dolorum sed aperiam! </p>
             <p>contact@foxwebsolution.net</p>
         </div>
         <div class="content-us-2">
